[package]
name = "mcb-server"
keywords = [
    "mcp",
    "server",
    "semantic-search",
    "code-analysis",
    "vector-embeddings",
]
categories = [
    "development-tools",
    "api-bindings",
    "science::artificial-intelligence",
]
description = "MCP Context Browser - Server transport and protocol layer"
homepage.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "mcb_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# Domain layer - core contracts and types
mcb-domain = { path = "../mcb-domain" }
# Application layer - use cases and business logic
mcb-application = { path = "../mcb-application" }
# Infrastructure layer - configuration and DI
mcb-infrastructure = { path = "../mcb-infrastructure" }

# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP server - migrated from Axum to Rocket in v0.1.2 (ADR-026)
rocket = { workspace = true }
rocket_dyn_templates = { workspace = true , features = ["handlebars"] }

# HTTP client - for client mode connecting to remote server
reqwest = { workspace = true }

# MCP SDK
rmcp = { workspace = true }

# Template engines
handlebars = { workspace = true }

# Markdown processing
pulldown-cmark = { workspace = true }

# Authentication
# jsonwebtoken removed - unused dependency (RUSTSEC-2023-0071)
bcrypt = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }

# System metrics
sysinfo = { workspace = true }

# Utilities
uuid = { workspace = true }

# Schema generation for MCP
schemars = { workspace = true }
# Input validation
validator = { workspace = true }

# Advanced Multi-Provider Strategy
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
dashmap = { workspace = true }
health = { workspace = true }

# Hashing for simple embeddings
sha2 = { workspace = true }

# Event bus
async-nats = { workspace = true }

# Configuration watching
notify = { workspace = true }

# Directory paths
dirs = { workspace = true }

# Compression
flate2 = { workspace = true }
tar = { workspace = true }

# Async streaming for HTTP SSE
futures = { workspace = true }
async-stream = { workspace = true }

# Providers - MUST be in dependencies for linkme inventory registration
mcb-providers = { path = "../mcb-providers" }
fs2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
fastembed = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
insta = { workspace = true }
mcb-domain = { path = "../mcb-domain", features = ["test-utils"] }
