[package]
name = "mcb-validate"
description = "Architecture validation for MCP Context Browser workspace"
homepage.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
autobenches = false
autotests = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Domain layer (canonical utils)
mcb-domain = { path = "../mcb-domain" }

# File traversal and globbing
walkdir.workspace = true
glob.workspace = true
globset.workspace = true

# No external dependencies needed - using simplified detection

# Pattern matching
regex.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true

# TOML parsing for Cargo.toml
toml.workspace = true

# Configuration management (layered providers)
figment = { workspace = true }

# Cargo metadata parsing (replaces manual Cargo.toml parsing)
cargo_metadata.workspace = true

# Error handling
thiserror.workspace = true
derive_more.workspace = true

# Date/time for timestamps
chrono.workspace = true

# CLI
clap = { workspace = true }

# Rule Engines - Core do sistema
rust-rule-engine.workspace = true
evalexpr.workspace = true

# Validation libraries - Para estruturas e campos
validator = { workspace = true, features = ["derive"] }

# JSON Schema validation - Para validar regras YAML
jsonschema.workspace = true

# Graph algorithms
petgraph.workspace = true

# Code metrics analysis - using rust-code-analysis fork with tree-sitter 0.26.3 + Kotlin
rust-code-analysis.workspace = true

# Tree-sitter for AST parsing
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true

# Async traits
async-trait.workspace = true
tokio.workspace = true
linkme.workspace = true

# Logging
tracing.workspace = true

# Explicit test targets — prevents utils.rs and test_constants.rs
# from being auto-discovered as standalone test binaries.
[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dev-dependencies]
tempfile.workspace = true
serde_yaml.workspace = true
rstest = { workspace = true }
mockall = { workspace = true }
insta = { workspace = true }
