[package]
name = "mcb"
keywords = ["mcp", "semantic-search", "code-analysis", "vector-embeddings"]
categories = [
    "development-tools",
    "api-bindings",
    "science::artificial-intelligence",
]
description = "MCP Context Browser - A Model Context Protocol server for semantic code analysis using vector embeddings"
homepage.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
autotests = false

[lib]
name = "mcb"
path = "src/lib.rs"

[[bin]]
name = "mcb"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Domain layer - re-exported for public API
mcb-domain = { path = "../mcb-domain" }

# Server layer - re-exported for run_server entry point
mcb-server = { path = "../mcb-server" }

# Infrastructure layer - re-exported for DI container
mcb-infrastructure = { path = "../mcb-infrastructure" }

# Providers - MUST be in dependencies (not dev-dependencies) for linkme inventory registration
mcb-providers = { path = "../mcb-providers" }

# Validation - for mcb validate subcommand
mcb-validate = { path = "../mcb-validate" }

# Core async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Loco framework - boot, config, server lifecycle
loco-rs = { workspace = true }

# Re-export for doc examples
serde_json = { workspace = true }

# Re-export key domain types for convenience
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
rstest = { workspace = true }
mockall = { workspace = true }
insta = { workspace = true }
mcb-domain = { path = "../mcb-domain", features = ["test-utils"] }
uuid = { workspace = true, features = ["v4"] }

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
