[package]
name = "my-server"
version = "0.1.0"
edition = "2024"

[dependencies]
my-domain = { path = "../my-domain" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
reqwest = { version = "0.13", features = ["json"] }
